[gd_scene load_steps=8 format=3 uid="uid://c82dl3dv3d3hb"]

[ext_resource type="Script" uid="uid://db7gwwneprdfi" path="res://core/widgets/menu/main_menu.gd" id="1_ytl3l"]
[ext_resource type="Theme" uid="uid://hve1e7mnexbi" path="res://themes/theme.tres" id="2_u4dxb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
content_margin_left = 20.0
content_margin_top = 16.0
content_margin_right = 20.0
content_margin_bottom = 16.0
bg_color = Color(0.12, 0.15, 0.2, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.28, 0.32, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_section_header"]
content_margin_left = 12.0
content_margin_top = 6.0
content_margin_right = 12.0
content_margin_bottom = 6.0
bg_color = Color(0.2, 0.25, 0.35, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.35, 0.45, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_textbox"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.113725, 0.133333, 0.160784, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.168627, 0.188235, 0.219608, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="SystemFont" id="SystemFont_g5bxx"]

[sub_resource type="SystemFont" id="SystemFont_fnb7o"]
oversampling = 5.4

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_u4dxb")
script = ExtResource("1_ytl3l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MainContent" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/ScrollContainer/MainContent"]
layout_mode = 2
theme_type_variation = "_section_header"
text = "LunCo Main Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/MainContent"]
layout_mode = 2

[node name="ProfilePanel" type="PanelContainer" parent="MarginContainer/ScrollContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Profile" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="SectionHeader" type="Label" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_section_header")
text = "Profile"
horizontal_alignment = 1

[node name="UsernameContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="UsernameLabel" type="Label" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/UsernameContainer"]
layout_mode = 2
text = "Username:"

[node name="Username" type="LineEdit" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/UsernameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_textbox")
placeholder_text = "Username"

[node name="WalletContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="WalletLabel" type="Label" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/WalletContainer"]
layout_mode = 2
text = "Wallet:"

[node name="Wallet" type="LineEdit" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/WalletContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_textbox")
placeholder_text = "Wallet"
editable = false

[node name="ProfileButtonsContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Connect wallet" type="Button" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/ProfileButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect Metamask"

[node name="CheckProfileNFT" type="Button" parent="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/ProfileButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Check Profile NFT"

[node name="NetworkingPanel" type="PanelContainer" parent="MarginContainer/ScrollContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Networking" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MainContent/NetworkingPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="SectionHeader" type="Label" parent="MarginContainer/ScrollContainer/MainContent/NetworkingPanel/Networking"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_section_header")
text = "Connection Settings"
horizontal_alignment = 1

[node name="IPContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MainContent/NetworkingPanel/Networking"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="IPLabel" type="Label" parent="MarginContainer/ScrollContainer/MainContent/NetworkingPanel/Networking/IPContainer"]
layout_mode = 2
text = "IP Address:"

[node name="IP" type="LineEdit" parent="MarginContainer/ScrollContainer/MainContent/NetworkingPanel/Networking/IPContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.956863, 0.956863, 0.956863, 1)
theme_override_fonts/font = SubResource("SystemFont_g5bxx")
theme_override_styles/normal = SubResource("StyleBoxFlat_textbox")
text = "127.0.0.1"
placeholder_text = "IP"

[node name="PortContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MainContent/NetworkingPanel/Networking"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PortLabel" type="Label" parent="MarginContainer/ScrollContainer/MainContent/NetworkingPanel/Networking/PortContainer"]
layout_mode = 2
text = "Port:"

[node name="Port" type="LineEdit" parent="MarginContainer/ScrollContainer/MainContent/NetworkingPanel/Networking/PortContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_textbox")
text = "9000"
placeholder_text = "Port"

[node name="SimulationPanel" type="PanelContainer" parent="MarginContainer/ScrollContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Simulation" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MainContent/SimulationPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="SectionHeader" type="Label" parent="MarginContainer/ScrollContainer/MainContent/SimulationPanel/Simulation"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_section_header")
text = "Simulation Options"
horizontal_alignment = 1

[node name="SimHost" type="Button" parent="MarginContainer/ScrollContainer/MainContent/SimulationPanel/Simulation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host Simulation"

[node name="SimClient" type="Button" parent="MarginContainer/ScrollContainer/MainContent/SimulationPanel/Simulation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect to Simulation"

[node name="ConnectToGlobal" type="Button" parent="MarginContainer/ScrollContainer/MainContent/SimulationPanel/Simulation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect to Global Simulation"

[node name="OptionsPanel" type="PanelContainer" parent="MarginContainer/ScrollContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Options" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MainContent/OptionsPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="SectionHeader" type="Label" parent="MarginContainer/ScrollContainer/MainContent/OptionsPanel/Options"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_section_header")
text = "Additional Options"
horizontal_alignment = 1

[node name="ReplayMode" type="Button" parent="MarginContainer/ScrollContainer/MainContent/OptionsPanel/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Replay Mode"

[node name="BackToLauncher" type="Button" parent="MarginContainer/ScrollContainer/MainContent/OptionsPanel/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Launcher"

[node name="Version" type="Label" parent="MarginContainer/ScrollContainer/MainContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
theme_override_fonts/font = SubResource("SystemFont_fnb7o")
text = "v1.0.0"
horizontal_alignment = 2

[connection signal="text_changed" from="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/UsernameContainer/Username" to="." method="_on_username_text_changed"]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/WalletContainer/Wallet" to="." method="_on_username_text_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/ProfileButtonsContainer/Connect wallet" to="." method="_on_connect_wallet_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MainContent/ProfilePanel/Profile/ProfileButtonsContainer/CheckProfileNFT" to="." method="_on_check_profile_nft_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MainContent/SimulationPanel/Simulation/SimHost" to="." method="_on_sim_host_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MainContent/SimulationPanel/Simulation/SimClient" to="." method="_on_sim_client_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MainContent/SimulationPanel/Simulation/ConnectToGlobal" to="." method="_on_connect_to_global_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MainContent/OptionsPanel/Options/ReplayMode" to="." method="_on_replay_mode_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MainContent/OptionsPanel/Options/BackToLauncher" to="." method="_on_back_to_launcher_pressed"]
